--- a/src/pages/AuthForm.css
+++ b/src/pages/AuthForm.css
@@ -13,6 +13,12 @@
   color: #333;
 }
 
+.auth-container1 h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
+
 .auth-container input {
   width: 100%;
   padding: 10px;
@@ -26,7 +32,7 @@
   width: 100%;
   padding: 10px;
   margin-top: 12px;
-  background-color: #4CAF50;
+  background-color:  #9638e3;
   color: white;
   border: none;
   border-radius: 6px;
@@ -35,7 +41,7 @@
 }
 
 .auth-container button:hover {
-  background-color: #45a049;
+  background-color: #9638e3;
 }
 
 .auth-container a {
@@ -46,6 +52,32 @@
   text-decoration: none;
 }
 
-.auth-container a:hover {
+.auth-container1 a:hover {
   text-decoration: underline;
+}
+
+.productos-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  max-width: 1000px;   /* ancho máximo del grid */
+  margin: 0 auto;      /* centrar horizontalmente */
+}
+
+.producto-card {
+  background: #f9f9f9;
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
+.producto-card button {
+  width: 100%;
+  margin-top: 8px;
+  background-color:  #9638e3;
+  color: white;
+  padding: 8px;
+  border: none;
+  border-radius: 6px;
 }
